# deez

./: .env.example  .gitignore  1001_TRACKLISTS_IMPLEMENTATION_STATUS.md  1001_TRACKLISTS_TEST_ANALYSIS.md  1001tracklists_test_report.json  1001tracklists_test_report.md  BANDCAMP_INTEGRATION_REPORT.md  MIXCLOUD_INTEGRATION_PLAN.md  PLAYWRIGHT_INTEGRATION_REPORT.md  README.md  README_NEO4J_SETUP.md  SOUNDCLOUD_INTEGRATION_PLAN.md  TODO_1001TRACKLISTS_FIXES.md  architecture.md  debug_rekordbox.py  docker-compose.override.yml.example  docker-compose.yml  generate_test_reports.py  legacy_music_agent.py  music_agent.py  pyproject.toml  test_bandcamp.py  test_bandcamp_detailed.py  test_beatport.py  test_graphiti_connection.py  test_mixcloud.py  test_mixcloud_simple.py  test_sync.py  test_sync_simple.py  tracklist_body_text.txt  tracklist_sample.html  tracklist_test_output.json
config/: agentcore.config.yaml
docs/: 1001_TRACKLISTS_INTEGRATION_DESIGN.md  1001_TRACKLISTS_INTEGRATION_SUMMARY.md  DISCOGS_INTEGRATION.md  LLM_SERVICE_AND_TRACKLISTS.md
graphiti_docs/: 00_glossary_ai_graph_terms.md  00_glossary_ai_graph_terms_enhanced.md  01_introduction_and_overview.md  01_introduction_and_overview_enhanced.md  02_technical_architecture.md  02_technical_architecture_enhanced.md  03_practical_implementation.md  03_practical_implementation_enhanced.md  04_advanced_features.md  04_advanced_features_enhanced.md  05_integration_patterns.md  05_integration_patterns_enhanced.md  06_performance_tuning.md  06_performance_tuning_enhanced.md  07_api_reference.md  07_api_reference_enhanced.md  08_benchmarks_and_evaluation.md  08_benchmarks_and_evaluation_enhanced.md  09_migration_guide.md  09_migration_guide_enhanced.md  10_troubleshooting.md  10_troubleshooting_enhanced.md  11_conclusion_and_future_enhanced.md  README.md
infrastructure/postgres/init/: 01_schema.sql
plans/: additional-integrations.md  extended_music_data_models.md  graphiti_neo4j_music_architecture.md  multi-agent-research-system-spec.md  music-metadata-research-system.md  rekordbox_integration_notes.md  soulseek_slskd_integration_plan.md  tools-refactoring.md  unified_music_ontology_comparison.md
scripts/: database_tools.py  debug_1001tracklists.py  dev_tools.py  docker_tools.py  init_databases.py  merge_env.py  open_ui.py  query_music_data.py  sync_rekordbox.py  test_discogs.py  test_discogs_auth.py  test_discogs_simple.py  test_playwright_tracklists.py  test_real_soulseek.py  test_simple_playwright.py  test_slskd_direct.py  test_soulseek.py  test_soulseek_detailed.py  test_soulseek_final.py  test_soulseek_working.py  test_tracklists.py  test_tracklists_comprehensive.py
slskd/config/: slskd.yml.example
src/music_agent/: ARCHITECTURE_PLANNING.md  __init__.py
src/music_agent/agent/: __init__.py  core.py  music_agent.py
src/music_agent/agent/config/: __init__.py  agent_config.py  prompts.py
src/music_agent/agent/models/: __init__.py  model_config.py  model_manager.py
src/music_agent/agent/tools_manager/: __init__.py  standard_tools.py  tools_manager.py
src/music_agent/architecture/: 01_CURRENT_SYSTEM_OVERVIEW.md  02_API_IMPLEMENTATION.md  03_USER_INTERFACE.md  04_QUALITY_ACQUISITION.md  05_TECHNICAL_IMPLEMENTATION.md  06_DJ_SOFTWARE_INTEGRATION.md  07_ROADMAP_METRICS.md  README.md
src/music_agent/auth/: __init__.py  __main__.py  deezer_auth.py  spotify_auth.py  youtube_auth.py
src/music_agent/cli/: interface.py
src/music_agent/integrations/: README.md  __init__.py  deezer.py  discogs.py  graphiti_memory.py  rekordbox_sync.py  soulseek.py  spotify.py  tracklists_1001.py  tracklists_simple.py  youtube.py
src/music_agent/integrations/bandcamp/: README.md  __init__.py  client.py
src/music_agent/integrations/beatport/: README.md  __init__.py  auth.py  client.py  config.py  exceptions.py  models.py
src/music_agent/integrations/beatport_old/: __init__.py  client.py  config.py
src/music_agent/integrations/deezer/: __init__.py  client.py
src/music_agent/integrations/discogs/: __init__.py  client.py  config.py  exceptions.py
src/music_agent/integrations/mixcloud/: QUICK_SETUP.md  README.md  __init__.py  client.py
src/music_agent/integrations/musicbrainz/: __init__.py  client.py  config.py  exceptions.py
src/music_agent/integrations/rekordbox/: __init__.py  client.py  converter.py  models.py  sync.py
src/music_agent/integrations/soulseek/: __init__.py  client.py
src/music_agent/integrations/soundcloud/: README.md  __init__.py  client.py
src/music_agent/integrations/youtube/: __init__.py
src/music_agent/models/: ontologies.py
src/music_agent/research/: demo.py  strands_implementation.py
src/music_agent/research/agents/: __init__.py  acquisition_scout.py  base.py  chief_researcher.py  data_collector.py  metadata_analyst.py  quality_assessor.py
src/music_agent/research/core/: __init__.py  metadata_merger.py  research_context.py
src/music_agent/research/models/: __init__.py  track_metadata.py
src/music_agent/services/: llm_service.py
src/music_agent/strands_research/: README.md  __init__.py  demo.py
src/music_agent/tools/: __init__.py  discogs_tools.py  download_tool.py  music_tools.py  registry.py  soulseek_tools.py  tracklists_simple_tools.py  tracklists_tools.py
src/music_agent/utils/: config.py  crypto.py  request_handler.py
tests/: README.md  TESTING_GUIDE.md  run_tests.py  test_report.md
tests/beatport/: test_beatport_api.py  test_connection.py  test_results.md
tests/deezer/: test_connection.py  test_deezer_api.py
tests/discogs/: test_connection.py  test_discogs_api.py  test_results.md
tests/mixcloud/: test_connection.py  test_mixcloud_api.py
tests/musicbrainz/: test_connection.py  test_musicbrainz_api.py  test_results.md
tests/reports/: TEST_SUMMARY.md  test_report_master.md  test_results_beatport.md  test_results_deezer.md  test_results_discogs.md  test_results_mixcloud.md  test_results_musicbrainz.md  test_results_soulseek.md  test_results_youtube.md
tests/soulseek/: test_connection.py  test_soulseek_api.py
tests/youtube/: test_connection.py  test_youtube_api.py
(+216 files in other folders)
